<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="totals">0</string>
    <string name="button1">7</string>
    <string name="button2">8</string>
    <string name="button3">9</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">1</string>
    <string name="button8">2</string>
    <string name="button9">3</string>
    <string name="button10">0</string>
    <string name="button11">+</string>

    <string name="action_clear">Clear</string>
    <string name="action_store">Store</string>
    <string name="action_recall">Recall</string>
</resources>
