<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SimpleCalculatorActivity"
    android:orientation="vertical"
    android:id="@+id/top_layout">

    <EditText android:text="@string/totals" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:editable="true"
        android:cursorVisible="true"
        android:id="@+id/summary"
        android:layout_gravity="right"
        android:gravity="end" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/layout1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:layout_weight="1"
            android:onClick="@string/button1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:text="@string/button2"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/layout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/layout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button7"
            android:id="@+id/button7"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button9"
            android:id="@+id/button9"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/bottom_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button10"
            android:id="@+id/button10"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button11"
            android:id="@+id/button11"
            android:layout_weight="4" />
    </LinearLayout>

</LinearLayout>
